leptos_macro/tests/view/13_multiple_generic_params_first_wrong_type.stderr
error[E0277]: `bool` is not a valid type for prop `fun_a` on component `Inner`
  --> tests/view/13_multiple_generic_params_first_wrong_type.rs:11:26
   |
11 |             <Inner fun_a=true fun_b=|| 42/>
   |                          ^^^^ the trait `Fn()` is not implemented for `bool`
   |
   = note: required: `Fn() -> bool`
note: required for `bool` to implement `__Check_fun_a`
  --> tests/view/13_multiple_generic_params_first_wrong_type.rs:16:1
   |
16 | #[component]
   | ^^^^^^^^^^^^
...
19 |     F: Fn() -> bool,
   |        ------------ unsatisfied trait bound introduced here
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: `bool` is not a valid type for prop `fun_a` on component `Inner`
  --> tests/view/13_multiple_generic_params_first_wrong_type.rs:11:26
   |
11 |             <Inner fun_a=true fun_b=|| 42/>
   |                          ^^^^
   |
note: the following trait bounds were not satisfied:
      `&bool: __Check_fun_a`
      `&mut bool: __Check_fun_a`
      `bool: __Check_fun_a`
  --> tests/view/13_multiple_generic_params_first_wrong_type.rs:16:1
   |
16 | #[component]
   | ^^^^^^^^^^^^
   = note: required: `Fn() -> bool`
   = help: items from traits can only be used if the trait is implemented and in scope
note: `__Pass_fun_a` defines an item `__pass_fun_a`, perhaps you need to implement it
  --> tests/view/13_multiple_generic_params_first_wrong_type.rs:16:1
   |
16 | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)
